--- a/source/docs/6.C51_Communication_checked.md
+++ b/source/docs/6.C51_Communication_checked.md
@@ -71,6 +71,7 @@ Once the 8-ch Line Follower detects the corresponding color of the line-followin
 (1) The corresponding libraries are imported, including **"LineFollowerLearn8CH.h"**, which provides support for the 8-ch line follower.
 
 {lineno-start=1}
+
 ```c
 #include "AI8051U.h"
 #include "stdio.h"
@@ -89,6 +90,7 @@ Once the 8-ch Line Follower detects the corresponding color of the line-followin
 ```
 
 (2) The sensor communication method can be switched using a macro definition. In this case, set `linefollower_8ch_communication` to `sensor_IIC`.
+
 {lineno-start=16}
 
 ```c
@@ -100,7 +102,8 @@ linefollower_8ch linefollower;
 ```
 
 (3) The program then initializes the timer base value and defines a delay function.
-{lineno-start=}
+
+{lineno-start=29}
 
 ```c
 /* Calculate timer initial value (计算定时器初值) */
@@ -151,6 +154,7 @@ void Delay1100ms(void)	//@40MHz
 ```
 
 (4) It checks the macro definition for the sensor connection method and performs initialization accordingly. For example, if the connection method is IIC, the program initializes the related IIC communication members of the sensor.
+
 {lineno-start=116}
 
 ```c
@@ -162,6 +166,7 @@ void Delay1100ms(void)	//@40MHz
 ```
 
 (5) Inside the `while` loop, the connection type is first determined. If the connection is IIC, the program sends a request and parses the returned data to obtain each channel’s status, analog value, and threshold. The acquired low and high 8-bit values are combined into a 16-bit value.
+
 {lineno-start=136}
 
 ```c
@@ -186,6 +191,7 @@ void Delay1100ms(void)	//@40MHz
 ```
 
 (6) In the `detect_state_all_channel_IIC()` function, sensor data is requested and parsed using `i2c_read_data()`. The results are extracted via a `for` loop to retrieve the status values for each channel.
+
 {lineno-start=24}
 
 ```c
@@ -203,6 +209,7 @@ void detect_state_all_channel_IIC(linefollower_8ch *obj){
 ```
 
 (7) The `get_AnalogVoltage_all_channel_IIC()` and `get_ThresholdValue_all_channel_IIC()` functions work similarly. The former retrieves and parses analog values from all channels, while the latter obtains and processes the threshold values. Both functions use `i2c_read_data()` to request and parse sensor data, then merge the low and high 8-bit values of each channel into 16-bit data in `for` loop.
+
 {lineno-start=36}
 
 ```c
@@ -248,6 +255,7 @@ void get_ThresholdValue_all_channel_IIC(linefollower_8ch *obj){
 (8) Finally, the results are printed through the serial port.
 
 {lineno-start=166}
+
 ```c
 		sprintf(imformation_string,\
 						"ch1:%hhu,ch2:%hhu,ch3:%hhu,ch4:%hhu,ch5:%hhu,ch6:%hhu,ch7:%hhu,ch8:%hhu\r\n",\
